# franka_robot

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/forces_torques/: BodyRequest.h  BodyRequestRequest.h  BodyRequestResponse.h
devel/include/franka_control/: ErrorRecoveryAction.h  ErrorRecoveryActionFeedback.h  ErrorRecoveryResult.h  SetCartesianImpedanceRequest.h  SetEEFrameResponse.h  SetJointImpedanceRequest.h  SetJointImpedanceResponse.h  SetKFrameResponse.h  SetLoadRequest.h  SetLoadResponse.h
devel/include/franka_example_controllers/: JointTorqueComparison.h
devel/include/franka_gripper/: GraspActionFeedback.h  GraspActionResult.h  HomingAction.h  HomingActionResult.h  HomingFeedback.h  HomingGoal.h  MoveAction.h  MoveActionResult.h  MoveFeedback.h  MoveResult.h  StopActionFeedback.h  StopActionGoal.h  StopActionResult.h  StopFeedback.h  StopGoal.h  StopResult.h
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/moveit_tutorials/: bag_publisher_maintain_time  pick_place_tutorial  planning_scene_tutorial
devel/lib/moving_interface/: moving_interface
devel/lib/panda_simulation/: box_publisher_node  robot_control_node  robot_state_initializer_node
devel/lib/pkgconfig/: forces_torques.pc  (+18 more)
install/: .rosinstall  local_setup.sh  setup.sh
src/forces_torques/: CMakeLists.txt  package.xml
src/forces_torques/script/: apply_body_wrench_client.py
src/gravity_compensation/: CMakeLists.txt  package.xml
src/moving_interface/: CMakeLists.txt  package.xml
src/triangular_traj/: CMakeLists.txt
(+119 files in other folders)
